Fix menu not showing

--- a/src/components/HeaderHomeOld/HeaderHomeOld.scss
+++ b/src/components/HeaderHomeOld/HeaderHomeOld.scss
@@ -264,6 +264,7 @@
 
 .drawer.active {
     display: block;
+    transform: translateZ(0);
 }
 
 .drawer-active__overlay {
@@ -281,6 +282,7 @@
     width: 284px;
     height: 100%;
     background: $color-white-primary;
+    transform: translateZ(0);
 }
 
 .drawer__title {
